--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+
+* {
+  font-family: system-ui;
+
+}
+
+hr {
+  color: black !important;
+}
+
+:root{
+  --main-color: #ffc107;
+}
