--- a/client/src/app/nav-bar/nav-bar.css
+++ b/client/src/app/nav-bar/nav-bar.css
@@ -3,6 +3,12 @@
   margin: 0;
   padding: 12px 0px 12px 8px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .title {
@@ -11,38 +17,47 @@
   display: inline;
   text-decoration: none;
   color: #000;
+  font-size: 20px;
 }
 
 .title:hover {
   color: black;
+  text-decoration: none;
 }
 
 a {
+
   text-decoration: none;
   font-weight: 500;
   color: black;
   font-size: 18px;
+
 }
 
 
 a:hover {
-  color: white
+  color: rgb(24, 157, 0);
+
 }
 
 .watchList-word {
   padding: 0px 9px;
+  color: #000;
 }
 
 .activeLink {
   color: white;
+
 }
 
 .search-link {
   text-decoration: none;
   color: #000;
+
 }
 
 
 .logout-btn:hover {
-  color: red;
+  color: rgb(24, 157, 0);
+  
 }
